<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pedido"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="paty.fiap.pizza.PedidoActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:text="@string/txt_saudacao"
            android:gravity="right"/>

        <TextView
            android:id="@+id/tvEscolhe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:text="@string/txt_escolhe_pizza"
            android:gravity="left"
            style= "@style/Fiap.Header" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cbAtum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_pizza_atum"/>
                <CheckBox
                    android:id="@+id/cbBacon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_pizza_bacon"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cbCalabresa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_pizza_calabresa"/>
                <CheckBox
                    android:id="@+id/cbMussarela"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="@string/txt_pizza_mussarela"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tvTamanho"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:text="@string/txt_tamanho_pizza"
            android:gravity="left"
            style= "@style/Fiap.Header" />

        <RadioGroup
            android:id= "@+id/rgTamanhoPizza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <RadioButton
                android:id="@+id/rbPequena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tamanho_pequena"
                />
            <RadioButton
                android:id="@+id/rbMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tamanho_media" />
            <RadioButton
                android:id="@+id/rbGrande"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_tamanho_grande" />


        </RadioGroup>




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:text="@string/txt_pagamento"
            android:gravity="left"
            style= "@style/Fiap.Header" />

        <Spinner
            android:id="@+id/spPagamentos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:entries="@array/opcoes_pagamentos"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:paddingTop="16dp"
            android:text="@string/txt_extras"
            android:gravity="left"
            style= "@style/Fiap.Header" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cbBordaRecheada"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="Borda Recheada"/>
                <CheckBox
                    android:id="@+id/cbRecheioExtra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="Recheio Extra"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cbRefrigerante"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="Refrigerante"/>
                <CheckBox
                    android:id="@+id/cbSobremesa"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:checked="false"
                    android:text="Sobremesa"/>
            </LinearLayout>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="Calcular"
            android:text="@string/calcular"
            style="@style/Fiap.Botao"
            android:layout_marginTop="@dimen/botao_marginTop"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"/>


    </LinearLayout>

</ScrollView>
